# south-shore-sentiment-studye

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: .env.example  settings.yaml  source_registry.yaml  verified_events.yaml
dashboards/: app.py
data/exports/: daily_emotions.csv  daily_emotions.parquet  geo_emotions.parquet  phase_emotions.csv  phase_emotions.parquet  platform_contrast.parquet
data/processed/: emotion_scores.parquet  posts_clean.parquet  sentiment_scores.parquet  topics.parquet
docs/: ETHICS.md  LIMITATIONS.md  METHODOLOGY.md
src/analysis/: cleaning.py  emotions.py  geo_tagger.py  longitudinal.py  phase_tagger.py  sentiment.py  topics.py
src/ingestion/: news_collector.py  pipeline.py  reddit_collector.py  synthetic_generator.py
src/utils/: constants.py  db.py  logger.py  verified_events.py
src/visualization/: emotion_curves.py  geo_charts.py  guidance.py  report_generator.py  topic_charts.py
tests/: test_cleaning.py  test_pipeline.py  test_sentiment.py
