[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "south-shore-sentiment-study"
version = "1.0.0"
description = "Sentiment analysis of community discourse around the South Shore ICE raid"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Sanju"}]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"dashboards/app.py" = ["E402"]  # Allow imports after sys.path modification

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
